RESOLVED FIXED142780
[GTK] Wrong transfer annotations used in GObject DOM bindings
https://bugs.webkit.org/show_bug.cgi?id=142780
Summary [GTK] Wrong transfer annotations used in GObject DOM bindings
Carlos Garcia Campos
Reported 2015-03-17 03:30:01 PDT
We are using transfer none for all methods returning a GObject DOM Object. That's not true. Only objects derived by Node are automatically released by the DOM object cache and can be transfer none. All other objects are added to the cache only to avoid creating the same wrapper twice for the same core object, but caller should release the returned reference. See also bug #118788
Attachments
Patch (5.49 KB, patch)
2015-03-17 03:33 PDT, Carlos Garcia Campos
gustavo: review+
Carlos Garcia Campos
Comment 1 2015-03-17 03:33:11 PDT
Carlos Garcia Campos
Comment 2 2015-03-17 05:22:47 PDT
Note You need to log in before you can comment on or make changes to this bug.