[GTK] Wrong transfer annotations used in GObject DOM bindings https://bugs.webkit.org/show_bug.cgi?id=142780

Reviewed by Gustavo Noronha Silva.

We are using transfer none for all methods returning a GObject DOM
Object. That's not true. Only objects derived from Node are
automatically released by the DOM object cache and can be transfer
none. All other objects are added to the cache only to avoid
creating the same wrapper twice for the same core object, but
caller should release the returned reference.

* bindings/gobject/WebKitDOMCustomUnstable.h:
* bindings/scripts/CodeGeneratorGObject.pm:
(GetTransferTypeForReturnType):
(GenerateFunction):

Canonical link: https://commits.webkit.org/160802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181643 268f45cc-cd09-0410-ab3c-d52691b4dbfc